--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ sentence-transformers>=2.7.0
 torch>=2.0.0
 transformers>=4.30.0
 
+# Arabic Language Support
+arabic-reshaper>=3.0.0
+python-bidi>=0.4.2
+
 # Document Processing
 PyPDF2==3.0.1
 python-docx==1.1.0
