--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,72 @@
-/.env
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Vector database (will be recreated automatically)
+data/vector_db/
+
+# Logs
+*.log
+logs/
+
+# Streamlit secrets (contains API keys)
+.streamlit/secrets.toml
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# PyTorch model cache
+.torch/
+
+# Hugging Face model cache
+.cache/huggingface/
