--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ langchain-chroma>=0.2.6
 langchain-huggingface>=0.3.1
 chromadb>=1.1.0
 sentence-transformers>=2.7.0
-torch>=2.0.0
+torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
 transformers>=4.30.0
 
 # Arabic Language Support
@@ -26,12 +26,3 @@ pandas==2.1.4
 numpy>=1.26.0
 tiktoken==0.5.2
 requests==2.31.0
-
-# UI Enhancements
-streamlit-chat==0.1.1
-plotly==5.17.0
-
-# Development and Testing
-pytest==7.4.3
-black==23.11.0
-flake8==6.1.0
