Update requirements.txt to specify minimum versions for libraries, ensuring compatibility with recent updates. Adjusted streamlit version to be greater than or equal to 1.32.0 and updated pandas to be greater than or equal to 2.2.0, while maintaining existing version constraints for other dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.29.0
+streamlit>=1.32.0
 langchain-core>=0.3.76
 langchain>=0.3.27
 langchain-google-genai>=2.0.0
@@ -12,15 +12,12 @@ torch>=2.0.0
 transformers>=4.30.0
 arabic-reshaper>=3.0.0
 python-bidi>=0.4.2
-PyPDF2==3.0.1
-python-docx==1.1.0
-python-dotenv==1.0.0
-pandas==2.1.4
+PyPDF2>=3.0.1
+python-docx>=1.1.0
+python-dotenv>=1.0.0
+pandas>=2.2.0
 numpy>=1.26.0
-tiktoken==0.5.2
-requests==2.31.0
-streamlit-chat==0.1.1
-plotly==5.17.0
-pytest==7.4.3
-black==23.11.0
-flake8==6.1.0
+tiktoken>=0.5.2
+requests>=2.31.0
+streamlit-chat>=0.1.1
+plotly>=5.17.0
