--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ langchain-text-splitters>=0.3.11
 langchain-chroma>=0.2.6
 langchain-huggingface>=0.3.1
 chromadb>=1.1.0
+pysqlite3-binary>=0.5.2
 sentence-transformers>=2.7.0
 torch>=2.0.0
 transformers>=4.30.0
