--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,18 @@
-streamlit>=1.32.0
-langchain-core>=0.3.76
-langchain>=0.3.27
-langchain-google-genai>=2.0.0
-langchain-community>=0.3.27
-langchain-text-splitters>=0.3.11
-langchain-chroma>=0.2.6
-langchain-huggingface>=0.3.1
-chromadb>=1.1.0
-pysqlite3-binary>=0.5.2
-sentence-transformers>=2.7.0
-torch>=2.0.0
-transformers>=4.30.0
-arabic-reshaper>=3.0.0
-python-bidi>=0.4.2
-PyPDF2>=3.0.1
-python-docx>=1.1.0
-python-dotenv>=1.0.0
-pandas>=2.2.0
-numpy>=1.26.0
-tiktoken>=0.5.2
-requests>=2.31.0
-streamlit-chat>=0.1.1
-plotly>=5.17.0
+# Essential packages for Military Training Chatbot MVP
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-chroma==0.1.0
+langchain-google-genai==0.0.5
+langchain-core==0.1.0
+chromadb==0.4.18
+sentence-transformers==2.2.2
+pyarabic==0.6.15
+python-multipart==0.0.6
+aiofiles==23.2.1
+pypdf2==3.0.1
+python-docx==1.1.0
+pydantic==2.5.0
+google-generativeai==0.3.2
+python-dotenv==1.0.0
