--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Essential packages for Military Training Chatbot MVP
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-chroma==0.1.0
-langchain-google-genai==0.0.5
-langchain-core==0.1.0
-chromadb==0.4.18
-sentence-transformers==2.2.2
-pyarabic==0.6.15
-python-multipart==0.0.6
-aiofiles==23.2.1
-pypdf2==3.0.1
-python-docx==1.1.0
-pydantic==2.5.0
-google-generativeai==0.3.2
-python-dotenv==1.0.0
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+langchain>=0.1.0
+langchain-community>=0.0.10
+langchain-chroma>=0.1.0
+langchain-google-genai>=0.0.5
+langchain-core>=0.1.7
+chromadb>=0.4.18
+sentence-transformers>=2.2.2
+pyarabic>=0.6.15
+python-multipart>=0.0.6
+aiofiles>=23.2.1
+pypdf2>=3.0.1
+python-docx>=1.1.0
+pydantic>=2.5.0
+google-generativeai>=0.3.2
+python-dotenv>=1.0.0
