--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ uvicorn[standard]>=0.24.0
 langchain>=0.1.0
 langchain-community>=0.0.10
 langchain-chroma>=0.1.0
+langchain-huggingface>=0.1.0
 langchain-google-genai>=0.0.5
 langchain-core>=0.1.7
 chromadb>=0.4.18
