--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "8000:8000"
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - CORS_ORIGINS=${CORS_ORIGINS:-https://smart.ibrahimshaikh.com.tr,http://localhost:3000,http://localhost:8000}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - LOG_TO_FILE=${LOG_TO_FILE:-false}
     volumes:
       - ./uploads:/app/uploads
       - ./database:/app/database
@@ -16,5 +19,11 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 40s
+      retries: 5
+      start_period: 60s
+    networks:
+      - default
+
+networks:
+  default:
+    driver: bridge
